namespace GameFramework.Constants
{
    public static class AnimatorConstants
    {
        public const string IS_IDLE = "IsIdle";
        public const string IS_MOVING = "IsMoving";
        public const string IS_JUMPING = "IsJumping";
        public const string IS_PLAYER_DETECTED = "IsPlayerDetected";
        public const string IS_CHARGING = "IsCharging";
        public const string IS_LOOKING_FOR_PLAYER = "IsLookingForPlayer";
        public const string IS_MELEE_ATTACKING = "IsMeleeAttacking";
        public const string IS_STUNNED = "IsStunned";
        public const string IS_DEAD = "IsDead";
        public const string IS_AIRBORNE = "IsAirborne";
    }
}
